# nexus-desktop-claude

./: IMPLEMENTATION-COMPLETE.md  INTEGRATION_SUMMARY.md  OAUTH-PKCE-IMPLEMENTATION.md  README.md  UPDATE-PLAN-V2.md  UPDATEPLAN-SUMMARY.md  UPDATEPLAN.md  index.html  package-lock.json  package.json  promotional-slides.html  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: ChatPanel.tsx  ContextPanel.tsx  ErrorBoundary.tsx  MainLayout.tsx  SettingsModal.tsx  StatusBar.tsx  SwarmPanel.tsx  TerminalPanel.tsx  Toast.tsx
src/store/: useNexusStore.ts
src/types/: index.ts
src/utils/: logger.ts
