[package]
name = "nexus-desktop"
version = "0.1.0"
description = "Nexus Desktop - Visual interface for Nexus CLI"
authors = ["Nexus Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[profile.release]
opt-level = 3
lto = true
strip = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tokio = { version = "1", features = ["full", "process", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
